dark mode fix

--- a/src/styles/products/ProductGallery.module.css
+++ b/src/styles/products/ProductGallery.module.css
@@ -76,7 +76,7 @@
   .galleryContainer {
     position: relative;
     top: 0;
-    height: 600px;
+    height: 500px;
   }
 
   .gallery {
